<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Malaria Prevention</string>
    <string name="app_homescreen_name">PC Malaria Home</string>
    <string name="user_medicine_settings_activity_pc_logo">Peace Corps Logo</string>
    <string name="user_medicine_settings_activity_setup_label">Set Up</string>
    <string name="user_medicine_settings_activity_drug_take_label">I Take</string>
    <string name="user_medicine_settings_activity_time_pick_label">Remind me at:</string>
    <string name="user_medicine_settings_activity_time_pick_button">Pick Time</string>
    <string name="user_medicine_settings_activity_if_forget_label">If I forget</string>
    <string name="age_limit_exceeded">Age limit exceeded.</string>
    <string name="value_lessthan_366">Enter a value less than 366</string>
    <string name="quantity_required">Quantity Required</string>
    <string name="user_medicine_settings_activity_done_button">DONE</string>
    <string name="second_analytic_screen_title">SECOND ANALYTIC SCREEN</string>
    <string name="first_analytic_screen_doses_missing_text">Doses in a Row</string>
    <string name="first_analytic_screen_medicine_last_taken_text">Medicine Last Taken</string>
    <string name="first_analytic_screen_medicine_adherence_to_medicine_text">Adherence to Medicine</string>
    <string name="alarm_auto_start_boot_completed_intent_check">android.intent.action.BOOT_COMPLETED</string>
    <string name="alert_dialog_title">Malaria Medication Reminder</string>
...
    <string name="label_apr">April</string>
    <string name="label_add">Add</string>
    <string name="label_category">Category</string>
    <string name="label_achievement_text">Achievement Text</string>
    <string name="label_med_consum">Medicine Consumption</string>
    <string name="label_change_entry">Change Entry!</string>
    <string name="label_ok">OK</string>
    <string name="label_exit_game">Exit Game</string>
    <string name="label_drug">Drug:</string>
    <string name="label_taken">Taken:</string>

    <!-- Hint string -->
    <string name="hint_name">Enter Your Name</string>
...
