...
    android:layout_marginRight="10dp"
    android:layout_weight="0.9">
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/badgeScreen"
        android:text="Badge Room"
        android:background="@drawable/info_hub_button"
        android:textColor="@color/white"
        android:layout_margin="5dp"/>
    <Button
        android:layout_width="match_parent"
...
                android:adjustViewBounds="true"
                android:layout_marginLeft="15dp"
                android:scaleType="fitCenter"
                />
            <Button
                android:background="@drawable/cal_right_arrow_brown"
                android:id="@+id/tempButton"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:adjustViewBounds="true"
                android:layout_marginLeft="15dp"
                android:scaleType="fitCenter"
                />
...
