...
              tools:context=".activities.UserMedicineSettingsFragmentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/user_medicine_settings_activity_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/user_medicine_settings_activity_setup_label"
...
                        android:textColor="@color/golden_brown"
                        />

                </LinearLayout>

                <Spinner
                    android:id="@+id/user_medicine_settings_activity_drug_select_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/user_medicine_settings_activity_time_pick_label"
...
