<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TableRow>
        <Button
            android:id="@+id/infoDrug"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/info_hub_normal"
            android:focusable="false"/>

        <TextView
            android:id="@+id/nameDrug"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/golden_brown"
            android:textSize="@dimen/text_size_15sp"
            android:padding="10dp"/>

    </TableRow>
</TableLayout>
